force-app/main/default/objects/Marketing_Cloud_Journey_Event__c/Marketing_Cloud_Journey_Event__c.object-meta.xml
<CustomObject>
    <description>Custom Object to hook into for MC journey initiations.</description>
    <label>Marketing Cloud Journey Event</label>
    <nameField>
        <displayFormat>MC-{000000}</displayFormat>
        <label>Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Cloud Journey Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>