force-app/main/default/objects/Marketing_Cloud_Journey_Event__c/fields/ContactWhoId__c.field-meta.xml
<CustomField>
    <fullName>ContactWhoId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContactWhoId</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Marketing Cloud Journey Events</relationshipLabel>
    <relationshipName>Marketing_Cloud_Journey_Events</relationshipName>
    <type>Lookup</type>
</CustomField>