force-app/main/default/objects/Marketing_Cloud_Journey_Event__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <description>Identifier for the journey - can be key or whatever.</description>
    <inlineHelpText>Identifier for the journey - can be key or whatever.</inlineHelpText>
    <label>Event</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>