force-app/main/default/objects/Marketing_Cloud_Journey_Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>Type of the event.</description>
    <inlineHelpText>Type of the event.</inlineHelpText>
    <label>Event Type</label>
    <length>60</length>
    <type>Text</type>
</CustomField>