force-app/main/default/objects/Marketing_Cloud_Journey_Event__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>Unique key per journey init.</description>
    <inlineHelpText>It&apos;s recommended to concatenate the event type here because this field must be entirely unique.</inlineHelpText>
    <label>Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>