force-app/main/default/objects/Marketing_Cloud_Journey_Event__c/fields/LeadWhoId__c.field-meta.xml
<CustomField>
    <fullName>LeadWhoId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LeadWhoId</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Marketing Cloud Journey Events</relationshipLabel>
    <relationshipName>Marketing_Cloud_Journey_Events</relationshipName>
    <type>Lookup</type>
</CustomField>