force-app/main/default/objects/Marketing_Cloud_Journey_Event__c/fields/RelatedToId__c.field-meta.xml
<CustomField>
    <fullName>RelatedToId__c</fullName>
    <label>RelatedToId</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>