force-app/main/default/objects/Marketing_Cloud_Journey_Event__c/fields/WhoId__c.field-meta.xml
<CustomField>
    <fullName>WhoId__c</fullName>
    <label>WhoId</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>